--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -31,6 +31,7 @@
 	padding: 25px;
 	border-radius: 10px;
 	border: 2px solid #000000;
+	padding-left:40px;
 	}
 .misc-block {
 	background: #F0F0F0;
@@ -57,12 +58,12 @@
 .row-name {
 	float:left;
 	height:160px;
-	width:30px;
+	width:0px;
 	position:relative;
 	display:inline-block;
 	}
 .vertical-text {
-	transform: translate(-50%) rotate(-90deg);
+	transform: translate(-50%) translate(-25px) rotate(-90deg);
 	transform-origin: center center 0;
 	text-align:center;
 	position:absolute;
