--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -4,11 +4,23 @@
 	padding: 10px;
 	margin: 10px;
 	font-family: arial;
-	font-size: 15px;
-	width: 250px;
-	height: 150px;
 	float:left;
 	}
+.small-block {
+	width: 200px;
+	height: 100px;
+	font-size:10px
+}
+.medium-block {
+	width: 250px;
+	height: 150px;
+	font-size:14px
+}
+.large-block {
+	width: 300px;
+	height: 200px;
+	font-size:18px
+}
 .now-task {
 	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 	}
@@ -43,7 +55,15 @@
 	flex-grow: 1;
 	flex-shrink: 99;
 	flex-basis: auto;
+	}
+.misc-block-small {
+	min-height:175px;
+	}
+.misc-block-medium {
 	min-height:225px;
+	}
+.misc-block-large {
+	min-height:275px;
 	}
 .misc-block:after {
 	clear:both;
@@ -57,11 +77,19 @@
 	}
 .row-name {
 	float:left;
-	height:160px;
 	width:0px;
 	position:relative;
 	display:inline-block;
 	}
+.row-name-small {
+	height:110px;
+	}	
+.row-name-medium {
+	height:160px;
+	}	
+.row-name-large {
+	height:210px;
+	}	
 .vertical-text {
 	transform: translate(-50%) translate(-25px) rotate(-90deg);
 	transform-origin: center center 0;
@@ -77,4 +105,7 @@
 .ui-button {
 	font-size: 8px;
 	padding: 2px 2px 2px 2px; /* Or whatever makes it small enough. */
+}
+.my-dialog {
+	display:none;
 }
