--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -17,7 +17,24 @@
 	font-size:14px
 }
 
-
+.finish-area {
+	display:none;
+	height:100px;
+	width:200px;
+	margin:10px;
+	padding:10px;
+	float:right;
+	margin-right:15px;
+	text-align:center;
+	color:#FFFFFF;
+}
+.normal-finish {
+	background:#000000;
+}
+.hover-finish {
+	background:#444444;
+	border: 2px solid white;
+}
 .large-block {
 	width: 300px;
 	height: 200px;
@@ -40,15 +57,19 @@
 	flex-shrink: 1;
 	}
 .task-row {
-	background: #F0F0F0;
 	margin: 10px;
 	padding: 25px;
 	border-radius: 10px;
 	border: 2px solid #000000;
 	padding-left:40px;
 	}
-.misc-block {
+.normal-row {
 	background: #F0F0F0;
+}
+.hover-row {
+	background: #FFFFFF;
+}	
+.misc-block {
 	margin:10px;
 	float: left;
 	padding: 25px;
