Fix Comma Handling, add Time Passed Icon

--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -28,6 +28,21 @@
 	top:79px;left:179px;
 }
 
+.clock-icon{
+	position:absolute;
+	font-size:3em;
+}
+.clock-icon-large{
+	top:145px;left:2;
+}
+.clock-icon-medium{
+	top:108px;left:2;
+}
+.clock-icon-small{
+	top:70px;left:2px;
+}
+
+
 #taskboard-toolbar {
 	display:flex;
 }
