--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -13,12 +13,12 @@
 }
 .repeat-icon-past {
 	font-size:2.6em;
-	top:0.2em;
-	right:0.65em;
+	top:0.1em;
+	right:0.15em;
 }
 .repeat-num-past {
-	top:1em;
-	right:2.3em;
+	top:0.8em;
+	right:1em;
 }
 .repeat-icon-normal {
 	font-size:3em;
@@ -59,14 +59,6 @@
 	top:0.3em;
 }
 
-.clock-icon{
-	float:left;
-	position:relative;
-	font-size:1em;
-	top:-0.2em;
-}
-
-
 
 #taskboard-toolbar {
 	display:flex;
@@ -98,22 +90,18 @@
 	
 .small-block {
 	width: 160px;
-	height: 100px;
 	font-size:10px
 }
 .medium-block {
 	width: 250px;
-	height: 150px;
 	font-size:14px
 }
 .large-block {
 	width: 300px;
-	height: 200px;
 	font-size:18px
 }
 
 .past-task {
-	height:3em !important;
 	width: 100% !important;
 	text-align: left;
 	min-width:40em !important;
@@ -121,8 +109,10 @@
 .now-task {
 	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 	text-align: center;
+	height:10em;
 	}
 .later-task {
+	height:10em;
 	opacity: 0.5;
 	text-align: center;
 }
