--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -2,9 +2,6 @@
 	padding:5px;
 }
 
-#output {
-	width:100%;display:flex;flex-direction:row;
-}
 
 .context-menu-item {
 	padding-top:5px;
@@ -126,7 +123,7 @@
 }
 
 .past-task {
-	width: 95%;
+	width: 100%;
 	text-align: left;
 }
 .past-task .task-name {
@@ -200,16 +197,14 @@
 	content:" ";
 	display:table;
 }
-.left-side{
-	float:left;
-	flex-grow: 0;
-	flex-shrink: 1;
-	}
 .task-row {
-	margin: 0.5em;
+	margin-top:0em;
+	margin-left:0.5em;
+	margin-right:0.5em;
+	margin-bottom:0.5em;
 	padding: 0.5em;
 	padding-left:0.8em;
-	padding-right:1.6em;
+	padding-right:1em;
 	border-radius: 10px;
 	border: 2px solid #000000;
 	padding-left:2em;
@@ -223,11 +218,21 @@
 .table-bar {
 	float:left;
 	width:100%;
+	padding-right:1.6em;
 }
 .table-contents {
 	float:left;
 }
 
+
+/*#output {
+	width:100%;display:flex;flex-direction:row;
+}
+.left-side{
+	float:left;
+	flex-grow: 0;
+	flex-shrink: 1;
+	}
 .misc-block {
 	margin:0.5em;
 	float: left;
@@ -244,7 +249,33 @@
 	clear:both;
 	content:" ";
 	display:table;
-}		
+}*/
+
+#output {
+	width:100%;
+}
+.left-side{
+	min-width:21.9em;
+	float: left;
+	}
+.misc-block {
+	margin:0.5em;
+	margin-top:1em;
+	padding: 0.5em;
+	padding-left:1em;
+	padding-right:1em;
+	border-radius: 10px;
+	border: 2px solid #000000;
+	width:auto;
+	overflow:hidden;
+	min-height:12.8em;
+	min-width:20em;
+}	
+.misc-block:after {
+	clear:both;
+	content:" ";
+	display:table;
+}	
 .app-header {
 	color: #fff;
 	text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
