--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -1,3 +1,16 @@
+body {
+	height:3000px;
+	font-family: arial;
+	background: darkgrey;
+}
+#taskboard-toolbar {
+	display:block;
+	background:darkgrey;
+	height:10em;
+	z-index:10;
+}
+
+
 .interval-button {
 	padding:5px;
 }
@@ -227,35 +240,16 @@
 }
 
 
-/*#output {
-	width:100%;display:flex;flex-direction:row;
-}
-.left-side{
-	float:left;
-	flex-grow: 0;
-	flex-shrink: 1;
-	}
-.misc-block {
-	margin:0.5em;
-	float: left;
-	padding: 0.5em;
-	padding-left:1em;
-	padding-right:2em;
-	border-radius: 10px;
-	border: 2px solid #000000;
-	flex-grow: 1;
-	flex-shrink: 99;
-	flex-basis: auto;
-}
-.misc-block:after {
-	clear:both;
-	content:" ";
-	display:table;
-}*/
-
 #output {
 	width:100%;
 }
+.padded-output {
+	margin-top:13.5em;
+}
+.padded-toolbar {
+	margin-top:4.5em;
+}
+
 .left-side{
 	min-width:21.9em;
 	float: left;
@@ -281,6 +275,8 @@
 	display:table;
 }	
 .app-header {
+	z-index:10;
+	background:darkgrey;
 	color: #fff;
 	text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
 	-webkit-font-smoothing: antialiased;
