--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -138,6 +138,24 @@ body {
 	display:none;
 }
 
+.new-task-drag {
+	padding: 0.8em;
+	padding-top:2em;
+	text-align:center;
+	margin-right:30px;
+	float:right;
+	width:100px;
+	height:100px;
+	background-color:LemonChiffon;
+	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+	position:relative;
+	display:inline-block;
+	margin: 0.8em;
+	font-family: arial;
+	cursor:hand;
+}
+
+
 .task-block {
 	position:relative;
 	display:inline-block;
@@ -147,6 +165,7 @@ body {
 	float:left;
 	cursor:hand;
 }
+
 
 .past-task {
 	width: 100%;
