--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -20,7 +20,15 @@ body {
 
 
 .interval-button {
+	padding:2px;
+	padding-left:5px;
+	padding-right:5px;
+	height:1.8em;
+	margin-top:0em;
+}
+.color-button {
 	padding:5px;
+	float:left;
 }
 
 
@@ -136,6 +144,18 @@ body {
 	flex: 1 99 600px;
 	text-align:right;
 	display:none;
+}
+
+#editDialog {padding:0px;}
+#editDialog table tr td:first-child {
+	padding-left:0.3em;
+}
+
+.circle {
+	border-radius: 50%;
+	width: 1em;
+	height: 1em; 
+	/* width and height can be anything, as long as they're equal */
 }
 
 .new-task-drag {
