--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -175,7 +175,7 @@ body {
 	display:inline-block;
 	margin: 0.8em;
 	font-family: arial;
-	cursor:hand;
+	cursor:pointer;
 }
 
 
@@ -186,7 +186,7 @@ body {
 	margin: 0.8em;
 	font-family: arial;
 	float:left;
-	cursor:hand;
+	cursor:pointer;
 }
 
 
