--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -180,7 +180,7 @@ body {
 .task-block {
 	position:relative;
 	display:inline-block;
-	padding: 0.8em;
+	padding-top: 0.8em;
 	margin: 0.8em;
 	font-family: arial;
 	float:left;
@@ -191,6 +191,7 @@ body {
 .past-task {
 	width: 100%;
 	text-align: left;
+	padding: 0.8em;
 }
 .past-task .task-name {
 	height:1.2em;display:inline-block;
