--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -205,7 +205,7 @@ body {
 	text-align: center;
 }
 .now-task .task-name {
-	height:1.5em;width:15em;text-align:center;
+	height:1.5em;text-align:center;
 }
 
 .later-task {
@@ -213,7 +213,7 @@ body {
 	opacity: 0.5;
 }
 .later-task .task-name {
-	height:1.5em;width:15em;text-align:center;
+	height:1.5em;text-align:center;
 }
 
 .wide-task {
