Move Edit Dialog to JS File

--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -65,6 +65,29 @@ body {
 	font-size:3em;
 }
 
+#dialog-toolbar {
+	position:absolute;
+	left:10em;
+	top:0.3em;
+	display:none;
+}
+.dialog-toolbar-button {
+	margin-top:0.2em;
+	margin-bottom:0.2em;
+	padding-left:10px;
+	padding-right:10px;
+	padding-top:2px;
+	padding-bottom:2px;
+	font-size:12px;
+}
+.sync-button {
+	font-size:10px !important;
+	padding:2px;
+	padding-left:5px;
+	padding-right:5px
+}
+
+
 .repeat-num{
 	opacity:0.8;
 	width:100%;
