--- a/css/taskboard.css
+++ b/css/taskboard.css
@@ -78,7 +78,7 @@ body {
 	padding-right:10px;
 	padding-top:2px;
 	padding-bottom:2px;
-	font-size:12px;
+	font-size:12px !important;
 }
 .sync-button {
 	font-size:10px !important;
