--- a/css/taskboard_toolbar.css
+++ b/css/taskboard_toolbar.css
@@ -61,10 +61,8 @@
 }
 
 #taskboard-toolbar {
-	display:flex;
 	background:darkgrey;
 	height:9em;
-	z-index:10;
 	width:100%;
 }
 .stuck-toolbar {
@@ -89,24 +87,22 @@
 }
 
 #left-buttons {
-	flex-grow: 1;
-	flex-shrink: 99;
-	flex-basis: 600px;
 	text-align:left;
 }
 
-#middle-buttons {
-	flex-grow: 0;
-	flex-shrink: 1;
-	flex-basis: 50em;
-	/*flex: 0 1 430px;*/
+#left-middle-buttons {
 	text-align:center;
 	display:none;
+	position:absolute;
+	left: calc(44vw - 200px);
+}
+#right-middle-buttons {
+	text-align:center;
+	display:none;
+	position:absolute;
+	left: calc(63vw - 100px);
 }
 .middle-button {
-	top:1em;
-	position:relative;
-	margin-top:30px;
 	margin-left:10px;
 	display:inline-block;
 }
@@ -116,11 +112,16 @@
 
 #right-buttons {
 	flex: 1 99 600px;
-	text-align:right;
+	/*text-align:right;*/
+	left: calc(100vw - 400px);
+	width:400px;
+	min-width:400px;
+	position:absolute;
 	display:none;
 }
 
 .new-task-drag {
+	white-space:normal;
 	padding: 0.8em;
 	padding-top:2em;
 	text-align:center;
@@ -133,7 +134,7 @@
 	position:relative;
 	display:inline-block;
 	margin: 0.8em;
-	margin-top:0.8em;
+	margin-top:0em;
 	font-family: arial;
 	cursor:pointer;
 }
@@ -143,9 +144,10 @@
 	height:100px;
 	width:200px;
 	margin:10px;
+	margin-right:15px;
+	margin-top:0px;
 	padding:10px;
 	float:right;
-	margin-right:15px;
 	text-align:center;
 	color:#FFFFFF;
 }
