--- a/css/taskboard_toolbar.css
+++ b/css/taskboard_toolbar.css
@@ -62,7 +62,6 @@
 
 #taskboard-toolbar {
 	background:darkgrey;
-	height:9em;
 	width:100%;
 }
 .stuck-toolbar {
@@ -70,8 +69,8 @@
 	margin-top:0em;
 }
 .moving-toolbar {
-	position:absolute;
-	margin-top:4em;
+	position:relative;
+	margin-top:3em;
 }
 
 .toolbar-button {
@@ -88,6 +87,8 @@
 
 #left-buttons {
 	text-align:left;
+	position:absolute;
+	left:0vw;
 }
 
 #left-middle-buttons {
